# Slai_Mid_Homework_250010065

./: .gitattributes  .gitignore  ANALYSIS_SCRIPTS_GUIDE.md  EXPERIMENT_GUIDE.md  README.md  analyze_model_size.py  compare_t5_mt5_tokenizer.py  convert_mt5_to_safetensors.py  download_model.py  generate_experiment_figures.py  generate_report_charts.py  inference.py  plot_transformer_pe.py  pyproject.toml  requirements.txt  test_collator.py  test_model_forward.py  test_preprocessing.py  test_tokenizer.py
data/vocab/: spm_zh_en.model  spm_zh_en.vocab  tokenizer_config.json
experiments/configs/: mt5_small.yaml  rnn_additive.yaml  rnn_additive_no_teacher.yaml  rnn_base.yaml  rnn_debug.yaml  rnn_multiplicative.yaml  sweep_d768.yaml  (+14 more)
reports/: 250010065_庞宏林_项目报告.md  Q&A准备.md  midterm_report.md  roadmap.md  step4_decoding.md  step5_transformer.md  演讲大纲.md
scripts/: analyze_hyperparam_sweeps.py  analyze_rnn_results.py  analyze_tokenizer_quality.py  analyze_transformer_ablations.py  analyze_transformer_ablations.py.bak  compare_decoding.py  data_profile.py  generate_all_visualizations.py  generate_master_comparison.py  infer_rnn.py  infer_transformer.py  preprocess_data.py  regenerate_visualizations.py  resume_transformer_100k_optimized.sh  run_hyperparam_sweep.sh  run_rnn_matrix.sh  run_transformer_100k_optimized.sh  run_transformer_ablation_matrix.sh  run_transformer_ablations.sh  test_transformer_100k_optimized.sh  train_rnn.sh  train_t5.sh  train_transformer.sh  verify_t5_chinese_tokenization.py
src/: cli.py
tests/: test_dataset.py  test_integration.py  test_models.py
(+72 files in other folders)
